Colab を使用して作成されました

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTbjCDmCxDq6L/Dzlqmv+x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -627,7 +626,7 @@
         },
         "outputId": "776f639e-0f8c-4453-d97e-5156b9206f81"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +652,7 @@
         "id": "99fB_a1iRADI",
         "outputId": "b5b25145-4e8b-4798-87f3-54d52998f290"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -679,7 +678,7 @@
         "id": "b70GCvUWLJdI",
         "outputId": "fc9c18f1-bc95-45f6-f1c9-eaaa57fdcac6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +704,7 @@
         "id": "WxueS5PfLMVZ",
         "outputId": "abad660d-ec80-4231-cb7f-c19bdffd71df"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +731,7 @@
         "id": "niDEVZHoLZoU",
         "outputId": "d8348f3a-e45a-4ca5-be29-f7101f58eb48"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +757,7 @@
         "id": "GjYo7YbmLuIf",
         "outputId": "bb043ae9-6115-4082-b402-fe03fcd3cdc4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -785,7 +784,7 @@
         "id": "X-fdMEltMLZy",
         "outputId": "e699a727-b672-44b0-c02f-3eafdfbe8db4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +808,7 @@
         "id": "_Ky3MSXBNhDa",
         "outputId": "f7bfb791-2d95-4c7e-904f-c6c7d4d4b34e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -839,7 +838,7 @@
         "id": "90msjHV5PsSK",
         "outputId": "b49aaef7-e01b-493c-ba28-e1a76269c88b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +862,7 @@
         "id": "XT3tZfWSQFlL",
         "outputId": "2356bdff-1f7a-4673-99fa-c7b3a01ce04c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +886,7 @@
         "id": "6zHH6mUqQpUp",
         "outputId": "5a7e72eb-f700-4a92-e7c8-3bbab634b4de"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,7 +909,7 @@
         "id": "Tm4Ns4ooQ7VV",
         "outputId": "8ebf6201-6efd-4355-af13-2a3116e93563"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +936,7 @@
         "id": "HCNFOcETQ-q-",
         "outputId": "b46593a7-dfe6-4091-d1d6-bc192ec44d47"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +967,7 @@
         "id": "VkUHwBJlR-I3",
         "outputId": "af78dff2-cd2a-4c4b-beba-6ac331df726d"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,7 +990,7 @@
         "id": "13znfbjMUFlR",
         "outputId": "be829700-b566-4e1d-8b12-92e0d220a4b3"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1017,7 @@
         "id": "tF8qXkcmUoUQ",
         "outputId": "d490ba89-48c5-4961-caa8-fdafb0b9cf29"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,7 +1041,7 @@
         "id": "0QRBRDUOVycC",
         "outputId": "9225f04f-8472-454c-b405-615ee5692148"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,7 +1074,7 @@
         "id": "fgzXya_8WsEU",
         "outputId": "d7cb5eb0-4566-42ed-c57f-e3749982ada9"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,7 +1108,7 @@
         "id": "IEU6a51aXEHh",
         "outputId": "5e737839-d7a5-4f99-c53f-0bb4d1b831d4"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1143,7 @@
         "id": "qr_sw0eqX8SR",
         "outputId": "150eb2fc-fb55-4372-c74a-9df8f1bc4df5"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1178,7 @@
         "id": "1EhxGs2hZWDQ",
         "outputId": "b6963f66-1a1c-443d-da24-31155d40a27f"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1202,7 @@
         "id": "0V3Do8uEcTqO",
         "outputId": "994dbd1d-7258-4c35-ed86-5868a3e24865"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1226,7 +1225,7 @@
         "id": "Bwy0xSURckJs",
         "outputId": "907a9643-f68f-4133-93dd-a271d27eceba"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1248,7 @@
         "id": "EhiZqL8YcuSx",
         "outputId": "5db63e9d-d55b-4be6-cbcb-8105e0c0d380"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,7 +1271,7 @@
         "id": "DPIROcAHcxgP",
         "outputId": "d795df45-5fb9-40a0-e646-83f8034511ed"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1295,7 +1294,7 @@
         "id": "1gBcWfr_du5q",
         "outputId": "310ec49b-e982-42a3-e432-daaa2c6e304a"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1319,7 +1318,7 @@
         "id": "ZSFXyDY6d1hy",
         "outputId": "7bfa0967-7101-4eb9-93c8-e70947b8c07f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1345,7 +1344,7 @@
         "id": "FmpJ0Q9mfVyr",
         "outputId": "00566409-f43c-4768-a1b2-48e4fbd1f58e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1369,7 +1368,7 @@
         "id": "zDkRv6CdfeJj",
         "outputId": "58e0d2d2-ffb1-428d-d895-6b7c32a9bce4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,7 +1393,7 @@
         "id": "hbmH007QBzcG",
         "outputId": "910d26aa-6010-4152-e430-b4f851a27c10"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,7 +1419,7 @@
         "id": "gWqwGFQ1CgfA",
         "outputId": "344e00be-e336-4733-97b5-4f0993f1a09a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,7 +1454,7 @@
         "id": "ffmuHwyzDGIF",
         "outputId": "a6be57ba-695c-4799-9d87-5ab13da711ec"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,7 +1479,7 @@
         "id": "_ucreqvuDuls",
         "outputId": "e0afdf9d-5193-421d-b6dc-6093c324ab3d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1510,7 +1509,7 @@
         "id": "6MbkPJQiFf8h",
         "outputId": "93d71964-98df-4ebd-9208-5ef90d66c690"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1534,7 +1533,7 @@
         "id": "gid4rtajHpwd",
         "outputId": "288f59cf-4d95-4849-dbf1-23247d57d79c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1558,7 +1557,7 @@
         "id": "P9u3eGRnJudL",
         "outputId": "e3aec765-6924-491b-a08d-e37f9112326a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1582,7 +1581,7 @@
         "id": "vMLwwMZ2KSiH",
         "outputId": "6a86773c-5bf1-4059-d07e-57a5605ec764"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1605,7 +1604,7 @@
         "id": "CHSNsvtMLfOa",
         "outputId": "f9630e97-30ad-4e1f-9215-0201217bf5dc"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1629,7 +1628,7 @@
         "id": "-axodR5KLk_D",
         "outputId": "a89323b2-6525-4832-f268-244c168e9a51"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1655,7 +1654,7 @@
         "id": "wJNKbgruMHlq",
         "outputId": "c7bbda96-e185-458a-c51a-5b3e2d7bf54d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1679,7 @@
         "id": "xcLXbvtwNQTo",
         "outputId": "624eac61-d8b8-4da4-a0e6-f2e9e100fb70"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1704,7 +1703,7 @@
         "id": "wynlGWUPObFT",
         "outputId": "33b05c9a-da5e-4e51-8b8d-7cb7d1c3b3df"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1728,7 +1727,7 @@
         "id": "nWExLioSQbMV",
         "outputId": "950bec3a-ee22-4dbf-df3c-83fd165b8533"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1755,7 +1754,7 @@
         "id": "IvgZqqkIQ7SP",
         "outputId": "fe277154-e7d7-4629-8444-a4c2827014e7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1787,7 +1786,7 @@
         "id": "8iDoZ467R0Jy",
         "outputId": "bab8a6c9-a4ed-43a2-a7d5-84e31c684083"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,7 +1822,7 @@
         "id": "UnnqHRf4TBjD",
         "outputId": "fed25472-9529-488a-e858-0a14ea1c383c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1851,7 +1850,7 @@
         "id": "5lMYwnx7VTGw",
         "outputId": "cb9d981b-1585-4802-93e1-56c80019edbf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1877,7 +1876,7 @@
         "id": "qFmFHMySxdWb",
         "outputId": "70c634c4-1f74-4c83-c70c-d6ce3d86d3cb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1899,7 +1898,7 @@
       "metadata": {
         "id": "fGMm-6QfxlNk"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1914,7 +1913,7 @@
         "id": "6mEINSe6zZAb",
         "outputId": "86474010-0f6f-4d67-c8d2-5cf2a4de6794"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1933,23 +1932,40 @@
       "metadata": {
         "id": "R7Fob326zd6u"
       },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WoxDLi6B2Noy"
-      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "d = {\n",
+        "  \"apple\": \"リンゴ\",\n",
+        "  \"peach\": \"モモ\",\n",
+        "  \"orange\": \"オレンジ\"\n",
+        "}\n",
+        "\n",
+        "while True:\n",
+        "  #英単語を表示する\n",
+        "  word = random.choice(list(d.keys()))\n",
+        "  print(word)\n",
+        "  print(\"カタカナで回答を入力してください\")\n",
+        "\n",
+        "  #自分が日本語を入力する\n",
+        "  answer = input()\n",
+        "\n",
+        "  #答えがあっているか表示する\n",
+        "  if answer == 0:\n",
+        "    print(\"終了します\")\n",
+        "    break\n",
+        "  elif answer == d[word]:#10行目変数wordにd.keysでキーが代入されているのでd[キー]となっている\n",
+        "    print(\"正解！\")\n",
+        "  else:\n",
+        "    print(\"残念！\")"
+      ],
       "metadata": {
-        "id": "bYGKukMc9rWO"
+        "id": "WoxDLi6B2Noy"
       },
       "execution_count": null,
       "outputs": []
