Colab を使用して作成されました

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -28,26 +28,44 @@
     {
       "cell_type": "code",
       "source": [
-        "! pip install requests"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "url = 'https://www.python.org/'\n",
+        "r = requests.get(url)\n",
+        "soup = BeautifulSoup(r.text)\n",
+        "soup.find_all('h2')\n",
+        "for i, h2_tag in enumerate(soup.find_all('h2')):\n",
+        "  print(i, h2_tag.text)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kd3R0zDqESIY",
-        "outputId": "73df5bb9-50d3-4d84-c160-5f54f6824145"
+        "id": "thasfOyPcrX0",
+        "outputId": "9604a2d6-4b88-40d3-e1a9-e63c80917959"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (2.31.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests) (3.7)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests) (2024.6.2)\n"
+            "0 Get Started\n",
+            "1 Download\n",
+            "2 Docs\n",
+            "3 Jobs\n",
+            "4 Latest News\n",
+            "5 Upcoming Events\n",
+            "6 Success Stories\n",
+            "7 Use Python for…\n",
+            "8 \n",
+            ">>> Python Enhancement Proposals (PEPs): The future of Python is discussed here.\n",
+            " RSS\n",
+            "\n",
+            "9 \n",
+            ">>> Python Software Foundation\n",
+            "\n"
           ]
         }
       ]
@@ -55,55 +73,59 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "from bs4 import BeautifulSoup"
+        "h2_text_list = []\n",
+        "for i, h2_tag in enumerate(soup.find_all('h2')):\n",
+        "  h2_text_list.append(h2_tag.text)"
       ],
       "metadata": {
-        "id": "bxIPbD7sLfG1"
+        "id": "YDucr8GVhuH-"
       },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ScSWODWSNLT2"
-      },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "url ='https://www.python.org/'\n",
-        "r = requests.get(url)\n",
-        "\n",
-        "soup = BeautifulSoup(r.text)\n",
-        "soup.find('h2').text\n"
+        "h2_text_list = [h2_tag.text for h2_tag in soup.find_all('h2')]"
+      ],
+      "metadata": {
+        "id": "Uc8BtUndla_9"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h2_text_list"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "Gsj1YX3gNkn5",
-        "outputId": "711a245b-0273-4fcb-88be-4ab9c6976ee0"
+        "id": "JJxBl8n-kpKP",
+        "outputId": "3b570686-130b-40a1-ee1f-6d17b1f38ea9"
       },
-      "execution_count": 35,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Get Started'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "['Get Started',\n",
+              " 'Download',\n",
+              " 'Docs',\n",
+              " 'Jobs',\n",
+              " 'Latest News',\n",
+              " 'Upcoming Events',\n",
+              " 'Success Stories',\n",
+              " 'Use Python for…',\n",
+              " '\\n>>> Python Enhancement Proposals (PEPs): The future of Python is discussed here.\\n RSS\\n',\n",
+              " '\\n>>> Python Software Foundation\\n']"
+            ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 12
         }
       ]
     },
@@ -111,7 +133,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "m2mwsPBpPnbb"
+        "id": "R6l5-EK7ktTa"
       },
       "execution_count": null,
       "outputs": []
